@@ -3,6 +3,7 @@
   * Option "autoaway" to define when to set user away if ever
   * Option "chandiscon" to define what to do with channels when server
     drops the connection
+  * Option not to redirect stdout into logfile
   * Fixed minor memory leak in rehash
 
 0.5.4-p3 - "compatible catnap"
